--- a/config/_default/menus.zh-cn.toml
+++ b/config/_default/menus.zh-cn.toml
@@ -11,19 +11,19 @@
 # ordered by weight from lowest to highest.
 
 [[main]]
-  name = "Blog"
-  pageRef = "posts"
+  name = "文章"
+  pageRef = "文章"
   weight = 10
 
 [[main]]
-  name = "Parent"
+  name = "友链"
+  pageRef = "links"
   weight = 20
 
 [[main]]
-  name = "example sub-menu 1"
-  parent = "Parent"
-  pageRef = "posts"
-  weight = 20
+  name = "关于我"
+  pageRef = "about"
+  weight = 30
 
 #[[main]]
 #  name = "example sub-menu 2"
