--- a/config/_default/menus.zh-cn.toml
+++ b/config/_default/menus.zh-cn.toml
@@ -42,15 +42,15 @@
 #  pageRef = "categories/awesome"
 #  weight = 20
 
-#[[main]]
-#  name = "Categories"
-#  pageRef = "categories"
-#  weight = 20
+[[main]]
+  name = "分类"
+  pageRef = "categories"
+  weight = 20
 
-#[[main]]
-#  name = "Tags"
-#  pageRef = "tags"
-#  weight = 30
+[[main]]
+  name = "标签"
+  pageRef = "tags"
+  weight = 30
 
 
 # -- Footer Menu --
